--- a/css/style.scss
+++ b/css/style.scss
@@ -96,6 +96,12 @@ ul[class=check] li {
     font-weight: bold;
 }
 
+#result {
+    color: $quinary-text;
+    font-size: 2em;
+    font-weight: bold;
+}
+
 /*Text alignement*/
 article p {
     text-align: left;
@@ -195,6 +201,16 @@ article {
     width: 100%;
 }
 
+table {
+    width: 80%;
+}
+
+.photo {
+    width: 100%;
+    object-fit: contain;
+    display: block;    
+}
+
 /*Adjusting margins and padding*/
 #pitch {
     padding: 2% 20% 1% 20%;
@@ -232,6 +248,10 @@ footer {
 
 .footer_image {
     margin: 1em;
+}
+
+table {
+    margin: 1% 10% 1% 10%;
 }
 
 /*Adding borders and shadows*/
